# Face-Reage-new

./: README.md
workspace/: CMakeLists.txt  README.md  minimal_build.sh  minimal_build_final.sh  setup.py
workspace/cli/: main.cpp
workspace/core/: CMakeLists.txt
workspace/core/include/ufra/: age_estimator.h  compositor.h  diffusion_editor.h  engine.h  face_detector.h  face_parser.h  feedforward_generator.h  gpu_memory_manager.h  minimal_engine.h  minimal_types.h  model_loader.h  optical_flow.h  types.h  utils.h
workspace/core/src/: age_estimator.cpp  engine.cpp  face_detector.cpp  face_parser.cpp  feedforward_generator.cpp  minimal_engine.cpp  utils.cpp
workspace/docs/: API_Documentation.md
workspace/plugins/: CMakeLists.txt
workspace/plugins/cli/: CMakeLists.txt
workspace/plugins/openfx/: CMakeLists.txt
workspace/plugins/openfx/src/: UFRa_Plugin.cpp
workspace/python/: ufra_demo.py
workspace/python_bindings/: CMakeLists.txt
workspace/python_bindings/src/: python_bindings.cpp
workspace/scripts/: build_and_test.sh  setup_dependencies.sh  simple_build.sh
workspace/tests/: CMakeLists.txt  test_compositor.cpp  test_engine.cpp  test_face_detector.cpp  test_face_parser.cpp  test_integration.cpp
